--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat app",
   "version": "0.0.1",
   "private": true,
+  "main": "server.js"
   "scripts": {
     "start": "node server.js"
   },
